# prox

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/prox/: Cargo.toml
crates/prox/src/: main.rs
crates/prox_array/: Cargo.toml
crates/prox_array/src/: lib.rs
crates/prox_bytecode/: Cargo.toml
crates/prox_bytecode/src/: chunk.rs  class.rs  function.rs  index.rs  lib.rs  opcode.rs  pool.rs
crates/prox_compiler/: Cargo.toml
crates/prox_compiler/src/: lib.rs
crates/prox_errors/: Cargo.toml
crates/prox_errors/src/: lib.rs  parser_cst.rs  parser_resolver.rs  svm_runtime.rs  walker_runtime.rs
crates/prox_interner/: Cargo.toml
crates/prox_interner/src/: constants.rs  lib.rs
crates/prox_lexer/: Cargo.toml
crates/prox_lexer/src/: lexer.rs  lib.rs  source.rs  span.rs  state.rs  token.rs
crates/prox_lexer/src/state/: double.rs  ident.rs  initial.rs  numeric.rs  slash.rs  string.rs  whitespace.rs
crates/prox_lexer/src/state/numeric/: decimal.rs  integer.rs  period.rs
crates/prox_parser/: Cargo.toml
crates/prox_parser/src/: ast.rs  cst.rs  cst_to_ast.rs  lib.rs  resolver.rs
crates/prox_parser/src/ast/: tree.rs
crates/prox_parser/src/cst/: operator.rs  parser.rs  tree.rs
crates/prox_parser/src/cst/parser/: sets.rs
crates/prox_parser/src/cst/tree/: typed_trees.rs
crates/prox_span/: Cargo.toml
crates/prox_span/src/: lib.rs
crates/prox_svm/: Cargo.toml
crates/prox_svm/src/: error.rs  gc.rs  io.rs  lib.rs  value.rs
crates/prox_svm/src/value/: native.rs
crates/prox_svm/tests/: common.rs  test_class.rs  test_closure.rs  test_for.rs  test_function.rs  test_logical_operator.rs  test_method.rs  test_miscellaneous.rs  test_nil.rs  test_operator.rs  test_print.rs  test_variable.rs
crates/prox_walker/: Cargo.toml
crates/prox_walker/src/: environment.rs  error.rs  interpreter.rs  io.rs  lib.rs  native.rs  value.rs
crates/prox_walker/tests/: common.rs  test_assignment.rs  test_block.rs  test_bool.rs  test_call.rs  test_comments.rs  test_constructor.rs  test_field.rs  test_if.rs  test_inheritance.rs  test_number.rs  test_regression.rs  test_return.rs  test_string.rs  test_super.rs  test_this.rs  test_while.rs
