[workspace]
members = [
    "crates/prox_lexer",
    "crates/prox",
    "crates/prox_parser",
    "crates/prox_interner",
]
resolver = "3"

[workspace.dependencies]
ariadne = "0.5.1"
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

prox_interner = { path = "crates/prox_interner" }
prox_lexer = { path = "crates/prox_lexer" }
prox_parser = { path = "crates/prox_parser" }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
cargo = { priority = -1, level = "deny" }
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
nursery = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

missing_docs_in_private_items = "allow"
cargo_common_metadata = "allow"
implicit_return = "allow"
multiple_crate_versions = "allow"
redundant_pub_crate = "allow"
use_self = "allow"

absolute_paths = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
deref_by_slicing = "deny"
disallowed_script_idents = "deny"
doc_include_without_cfg = "deny"
exit = "deny"
filetype_is_file = "deny"
float_arithmetic = "deny"
float_cmp_const = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
infinite_loop = "deny"
integer_division = "deny"
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
min_ident_chars = "deny"
missing_assert_message = "deny"
mod_module_files = "deny"
multiple_unsafe_ops_per_block = "deny"
needless_raw_strings = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
pointer_format = "deny"
precedence_bits = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method = "deny"
semicolon_inside_block = "deny"
separated_literal_suffix = "deny"
shadow_unrelated = "deny"
single_char_lifetime_names = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_to_string = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unneeded_field_pattern = "deny"
unused_trait_names = "deny"
