[package]
name = "prox"
version = "0.0.0"
edition = "2024"

[dependencies]
ariadne = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
tracing-subscriber = { workspace = true }

prox_lexer = { workspace = true }
prox_parser = { workspace = true }


[lints]
workspace = true
